--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,12 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
+tasks.jar {
+	manifest {
+		attributes['Main-Class'] = 'pesssoal.project.api_rest.ApiRestApplication'
+	}
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
